# databricks-mcp

./: README.md  catalogs.py  main.py  pyproject.toml  queries.py  resources.py  schemas.py  tables.py
